Fix error parsing and retryable checks.