@@ -2,29 +2,36 @@ package systems.comodal.pagerduty.exceptions;
 
 import java.net.http.HttpResponse;
 import java.util.ArrayList;
+import java.util.Collections;
 import java.util.List;
 
 public final class PagerDutyRequestException extends RuntimeException implements PagerDutyClientException {
 
   private final String status;
+  private final long errorCode;
   private final List<String> errors;
   private final HttpResponse<?> httpResponse;
 
   private PagerDutyRequestException(final String status,
                                     final String message,
+                                    final long errorCode,
                                     final List<String> errors,
                                     final HttpResponse<?> httpResponse) {
     super(message);
     this.status = status;
+    this.errorCode = errorCode;
     this.errors = errors;
     this.httpResponse = httpResponse;
   }
 
   @Override
   public boolean canBeRetried() {
-    return httpResponse == null || httpResponse.statusCode() > 404;
+    return httpResponse == null
+        || httpResponse.statusCode() >= 500
+        || httpResponse.statusCode() == 429;
   }
 
+  @Override
   public List<String> getErrors() {
     return errors;
   }
@@ -34,6 +41,11 @@ public final class PagerDutyRequestException extends RuntimeException implements
     return httpResponse;
   }
 
+  @Override
+  public long getErrorCode() {
+    return errorCode;
+  }
+
   public String getStatus() {
     return status;
   }
@@ -41,6 +53,7 @@ public final class PagerDutyRequestException extends RuntimeException implements
   @Override
   public String toString() {
     return "PagerDutyRequestException{status='" + status + '\'' +
+        ", errorCode=" + errorCode +
         ", errors=" + errors +
         ", httpResponse=" + httpResponse + '}';
   }
@@ -54,6 +67,7 @@ public final class PagerDutyRequestException extends RuntimeException implements
     private final HttpResponse<?> response;
     private String status;
     private String message;
+    private long errorCode;
     private List<String> errors;
 
     private PagerDutyRequestExceptionBuilder(final HttpResponse<?> response) {
@@ -65,9 +79,9 @@ public final class PagerDutyRequestException extends RuntimeException implements
       if (errors == null) {
         errors = List.of();
       } else if (errors.size() > 1) {
-        errors = List.copyOf(errors);
+        errors = Collections.unmodifiableList(errors);
       }
-      return new PagerDutyRequestException(status, message, errors, response);
+      return new PagerDutyRequestException(status, message, errorCode, errors, response);
     }
 
     @Override
@@ -79,6 +93,12 @@ public final class PagerDutyRequestException extends RuntimeException implements
     @Override
     public Builder message(final String message) {
       this.message = message;
+      return this;
+    }
+
+    @Override
+    public Builder errorCode(final long errorCode) {
+      this.errorCode = errorCode;
       return this;
     }
 
@@ -103,6 +123,8 @@ public final class PagerDutyRequestException extends RuntimeException implements
     Builder status(final String status);
 
     Builder message(final String message);
+
+    Builder errorCode(final long errorCode);
 
     Builder error(final String error);
   }
